; ModuleID = '/home/carl/AnghaBench/esp-idf/components/esp_eth/src/extr_esp_eth_mac_openeth.c_emac_opencores_set_promiscuous.c'
source_filename = "/home/carl/AnghaBench/esp-idf/components/esp_eth/src/extr_esp_eth_mac_openeth.c_emac_opencores_set_promiscuous.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@OPENETH_MODER_REG = common dso_local global i32 0, align 4
@OPENETH_PRO = common dso_local global i32 0, align 4
@ESP_OK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32)* @emac_opencores_set_promiscuous to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @emac_opencores_set_promiscuous(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %5 = load i32, i32* %4, align 4
  %6 = icmp ne i32 %5, 0
  br i1 %6, label %7, label %11

7:                                                ; preds = %2
  %8 = load i32, i32* @OPENETH_MODER_REG, align 4
  %9 = load i32, i32* @OPENETH_PRO, align 4
  %10 = call i32 @REG_SET_BIT(i32 %8, i32 %9)
  br label %15

11:                                               ; preds = %2
  %12 = load i32, i32* @OPENETH_MODER_REG, align 4
  %13 = load i32, i32* @OPENETH_PRO, align 4
  %14 = call i32 @REG_CLR_BIT(i32 %12, i32 %13)
  br label %15

15:                                               ; preds = %11, %7
  %16 = load i32, i32* @ESP_OK, align 4
  ret i32 %16
}

declare dso_local i32 @REG_SET_BIT(i32, i32) #1

declare dso_local i32 @REG_CLR_BIT(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
